--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
          body, html {
             height: 100%;
         }
+
+        #p5CanvasContainer {
+            width: 100%;
+            height: auto;
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+        }
+
+        #p5CanvasContainer canvas {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .p5Canvas {
+            width: 100% !important;
+            height: 100% !important;
+            border: 1px solid #333;
+            border-radius: 12px;
+        }
     </style>
 </head>
 
@@ -80,9 +101,9 @@
                 <p><strong>Are you happy:</strong> <span id="savedIsHappy"></span></p>
             </div>
         </div>
-    </div>
 
-    <div id="p5CanvasContainer" class="canvas-container">
+         <div id="p5CanvasContainer" class="canvas-container mt-5">
+         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
