Updated UI, follow Neumorphism design style

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
             <!-- Are You Happy? -->
             <div class="mb-3">
-                <label class="form-label">Are you feeling happy right now?</label>
-                <div class="form-check">
+                <label class="form-label d-block">Are you feeling happy right now?</label>
+                <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="isHappy" id="happyYes" value="yes" required>
                     <label class="form-check-label" for="happyYes">
                         Yes
                     </label>
                 </div>
-                <div class="form-check">
+                <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="isHappy" id="happyNo" value="no" required>
                     <label class="form-check-label" for="happyNo">
                         No
@@ -86,7 +86,7 @@
             </div>
 
             <!-- Save Image Button -->
-            <div id="saveImageButton" class="mb-2"></div>
+            <div id="saveImageButton" class="mb-3"></div>
         </div>
 
          <div id="p5CanvasContainer" class="canvas-container">
